--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@vueuse/core": "^9.12.0",
+    "axios": "^1.2.6",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
