--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+# Global settings
 VUE_APP_TITLE= R(RE)
+# Api settings
+VUE_APP_API_URL= http://localhost:8000/api
+# Default local settings
 VUE_APP_I18N_LOCALE=fr
 VUE_APP_I18N_FALLBACK_LOCALE=fr
