--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vueuse/core": "^9.12.0",
     "axios": "^1.2.6",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-i18n": "^9.1.0",
