--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios": "^1.2.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "chart.js": "^4.2.1",
     "core-js": "^3.8.3",
     "jquery": "^3.6.3",
     "select2": "^4.1.0-rc.0",
     "select2-bootstrap-5-theme": "^1.3.0",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.2.0",
     "vue-i18n": "^9.1.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.1.0",
