--- a/.env
+++ b/.env
@@ -1,5 +1,14 @@
+#################### APP SETTINGS ####################
+# Title
 VUE_APP_TITLE= R(RE)
+# Environment
+VUE_APP_ENV=development
+# URL
 VUE_APP_BASE_URL= /
-VUE_APP_API_URL= http://localhost:8000/api
+# Locale
 VUE_APP_I18N_LOCALE=fr
 VUE_APP_I18N_FALLBACK_LOCALE=fr
+
+#################### API SETTINGS ####################
+# URL
+VUE_APP_API_URL= http://localhost:8000/api
