--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.2.1",
     "core-js": "^3.8.3",
     "jquery": "^3.6.3",
+    "quill": "^1.3.7",
     "select2": "^4.1.0-rc.0",
     "select2-bootstrap-5-theme": "^1.3.0",
     "vue": "^3.2.13",
