--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-icons": "^1.10.3",
     "chart.js": "^4.2.1",
     "core-js": "^3.8.3",
+    "flag-icons": "^6.6.6",
     "jquery": "^3.6.3",
     "quill": "^1.3.7",
     "select2": "^4.1.0-rc.0",
