dark theme and styles

--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ VUE_APP_I18N_FALLBACK_LOCALE=fr
 
 #################### API SETTINGS ####################
 # URL
-VUE_APP_API_URL= http://localhost:8000/api
+VUE_APP_API_URL= https://cesi-rr.alwaysdata.net/api
